# salt

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  example.sl  mvp.sl  prelude.sl  todo.txt
cex/: example2.sl  expressions.sl  pointers.sl
extra/: textmate.json
salt-highlighter/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
salt-highlighter/syntaxes/: salt.tmLanguage.json
saltc-out/: Makefile  driver_main.cpp
smake/: Makefile  smake.cpp
src/: Makefile  common.cpp  common.h  lexer.cpp  lexer.h  main.cpp  test_header.cpp  test_header.h  tokens.cpp  tokens.h
src/frontend/: Makefile  ast.cpp  ast.h  flags.cpp  flags.h  frontendllvm.h  irgenerator.cpp  irgenerator.h  lexer.cpp  lexer.h  main.cpp  miniregex.cpp  miniregex.h  operators.cpp  operators.h  parser.cpp  parser.h  saltfrontend.h  sighandlers.cpp  sighandlers.h  tokens.cpp  tokens.h  types.cpp  types.h
src/graveyard/: code_graveyard.cpp
src/misc/: integer.h
src/testing/: t_Integer.h  t_common.h  t_testing.h  testing.cpp  testing.h
